Tue Feb 15 12:02:39 EET 2000  Vadim Chekan  <vadim@etc.lviv.ua>

	* htcommon/HtConfiguration.cc,HtConfiguration.h: fixed bug discovered
	by Gilles. HtConfiguration was able to get info only from "url" and
	"server" block.

	* /htcommon/conf_parser.yxx: deleted 1st parameter for new char[],
	lefted when realloc was replaced by new char[]. Removed a few unused 
	variable declaration.

Sun Feb 13 21:19:04 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/defaults.cc: Get rid of uncoded_db_compatible since
	the current DB format has clearly broken backwards compatibility.

	* htsearch/Display.cc (Display), htnotify/htnotify.cc (main),
	htmerge/docs.cc (convertDocs), htmerge/db.cc (mergeDB),
	htdig/htdig.cc (main): Remove call to DocumentDB::setCompatibility().

	* htcommon/DocumentDB.h (class DocumentDB): Remove
	setCompatibility and related private variable.

	* htcommon/DocumentDB.cc ([], Delete): Don't bother checking for
	an unencoded URL, at this point all URLs will be encoded using
	HtURLCodec.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Regenerate using cf_generate.pl.

Sat Feb 12 21:29:20 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/HtSGMLCodec.cc (HtSGMLCodec): Always translate &quot;
	&amp; &lt; and &gt;

	* htcommon/defaults.cc: Remove translate_* and word_list
	attributes since they're now no longer used.

	* htdig/PDF.cc (parseNonTextLine): Fix bogus escape sequences
	around Title parsing. Fixes PR#740.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Regenerate using cf_generate.pl.
	
Thu Feb 10 23:18:37 2000  Loic Dachary  <loic@ceic.com>

	*  Connection.cc (Connection): set retry_value to 1 instead of
	   0 as suggested by Geoff. 

Thu Feb 10 17:36:09 2000  Loic Dachary  <loic@ceic.com>

	* htdig/Document.cc: fix (String)->(char*) conversion warnings.

	* htword/WordList.cc: kill Collect(WordSearchDescription) which
	  was useless and error prone.
