@@ -4,9 +4,12 @@ Tue Feb 15 12:02:39 EET 2000  Vadim Chekan  <vadim@etc.lviv.ua>
 	by Gilles. HtConfiguration was able to get info only from "url" and
 	"server" block.
 
-	* /htcommon/conf_parser.yxx: deleted 1st parameter for new char[],
+	* htcommon/conf_parser.yxx: deleted 1st parameter for new char[],
 	lefted when realloc was replaced by new char[]. Removed a few unused 
 	variable declaration.
+
+	* htcommon/Makefile.am: added -d flag to bison to generate
+	conf_parser.h template from conf_parser.yxx
 
 Sun Feb 13 21:19:04 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>
 
